# GripLab

./: .gitignore  LICENSE  README.md  app_config.py  config.yaml  controllers.py  main.py  modal_layouts.py  project_requirements.md  pyproject.toml  pyprojects.toml  requirements.md  requirements.txt  setup.py  simplified_main_py.py  ui_components.py  version.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml
app/: __init__.py  app.py  config.py  controllers.py  models.py
converters/: __init__.py  channels.py  command.py  conventions.py  units.py
core/: __init__.py  dataio.py  plotting.py  processing.py
docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md  index.md
examples/: example_notebook.ipynb
modules/: logger_setup.py  tk_utilities.py  unit_conversion.py
scripts/: build_exe.py  cmd_generator.py  convention_conversion.py  dataio.py  logger_setup.py  models.py  optimized_unit_conversion.py  plotting.py  processing.py  refactored_cmd_generator.py  refactored_convention_conversion.py  refactored_dataio.py  refactored_plotting.py  refactored_processing.py  tk_utilities.py  unit_conversion.py
src/griplab/: plotting.py  processing.py
tests/: function_testing.ipynb
ui/: __init__.py  components.py  modals.py  styles.css  tabs.css
utils/: __init__.py  dialogs.py  logger.py
